testsuite/poke.pkl/mul-integers-overflow-diag-3.pk
/* { dg-do compile } */

var res
  = 4 as int<3> * 2 as int<3>; /* { dg-error "overflow" } */
